# Proyecto_de_diseno_CE

./: .gitignore  Readme.md
C_and_Cpp_merge/: funciones_c.c  funciones_c.h
C_and_Cpp_merge/shared_memory/: Makefile  consumer  consumer.cpp  creator  creator.cpp  posix_shared_memory.c  posix_shared_memory.h  producer  producer.cpp  reader  reader.cpp  shared_memory.cpp  shared_memory.h  writer  writer.cpp
C_and_Cpp_merge/sockets/: client  client.cpp  posix_sockets.c  posix_sockets.cpp  posix_sockets.h  server  server.cpp
C_and_Cpp_merge/test/: Makefile  main.cpp  programa
Charts/: bar_2_chart.py  bar_chart.py  charts.py  data.txt  line_chart.py
FPGA/HW/: config.h  exponential-lut.hpp
FPGA/HW_o/: exponential-lut.hpp
FPGA/MatMul/: makefile  makefile_profe  matric_mult_profe.cpp  matrix_mult.cpp  matrix_mult.h  matrix_mult_profe.cpp  matrix_mult_profe.h  matrix_mult_temp.cpp  matrix_mult_temp.h
FPGA/XRT/: makefile  xrt_app.cpp
FPGA/test/: Makefile  fixed_point.cpp  fixed_point.h  fixed_point_test  main.cpp
IPC/message_passing/ZeroMQ/: CMakeLists.txt  Makefile  client  client.cpp  server  server.cpp  sockets.cpp  sockets.hpp
IPC/sockets/POCO/: CMakeLists.txt  client.cpp  server  server.cpp  sockets.cpp
LLM_GGUF_graph/: gguf_context.txt  gguf_context_Meta-Llama-3-8B.Q4_K_S.txt  gguf_context_flux1-dev-Q4_K_S.txt  gguf_context_law-llm.Q2_K.txt  llama.dot
LLM_GGUF_graph/GGML graph/: GGML_code.c  Makefile  call_tree.dot  call_tree.txt  code.cpp  gguf_context  gguf_context.c  (+3 more)
tests/: Makefile  creator  creator.cpp  shared_memory.cpp  shared_memory.hpp
(+198 files in other folders)
